# kraken-agent

./: .gitignore  AGENTS.md  Dockerfile  README.md  cli.py  get_kraken.py  package-lock.json  package.json  patch_kraken.py
agent/: agent_init.py
docker/: stage2-hook.sh
gateway/: slash_commands.py
hermes-tui-rust/: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_PLAN.md  KRAKEN_UPGRADE_PLAN.md  MODERN_TUI_ANIMATIONS.md  ORCHESTRATION.md  PHASE2_ORCHESTRATION.md  PHASE2_STATUS.md  PROJECT_DOCUMENTATION.md  README.md
hermes-tui-rust/.playwright-mcp/: page-2026-06-16T23-51-08-017Z.yml  page-2026-06-16T23-51-40-697Z.yml  page-2026-06-17T00-01-30-207Z.yml
hermes-tui-rust/DOCUMENTATION/: 00_INDEX.md  01_EXECUTIVE_SUMMARY.md  02_CODEBASE_STRUCTURE.md  03_COMMIT_HISTORY.md  05_IMPLEMENTATION_GUIDE.md
hermes-tui-rust/src/: app.rs  error.rs  lib.rs  main.rs
hermes-tui-rust/src/engine/: mod.rs
hermes-tui-rust/src/handlers/: input.rs  keys.rs  mod.rs  mouse.rs
hermes-tui-rust/src/protocol/: client.rs  mod.rs  transport.rs  types.rs
hermes-tui-rust/src/state/: capabilities.rs  config.rs  hashline.rs  messages.rs  mod.rs  session.rs
hermes-tui-rust/src/ui/: banner.rs  borders.rs  cards.rs  chat.rs  completions.rs  composer.rs  dashboard.rs  gif.rs  hashline.rs  help.rs  ide.rs  kanban.rs  mod.rs  model_picker.rs  prompts.rs  session_picker.rs  subagent.rs  toolbar.rs  wave.rs
hermes-tui-rust/src/utils/: ansi.rs  clipboard.rs  cursor.rs  markdown.rs  mod.rs  rope.rs  sixel.rs  syntax.rs  text.rs
hermes_cli/: _parser.py  banner.py  doctor.py  inventory.py  main.py  model_switch.py  models.py  skin_engine.py  skin_engine.py.bak  web_server.py
optional-skills/fullstack-webdev/: DESCRIPTION.md
optional-skills/fullstack-webdev/api-design/: SKILL.md
optional-skills/fullstack-webdev/auth-implementation-patterns/: SKILL.md
optional-skills/fullstack-webdev/cloudflare-workers/: SKILL.md
plugins/dashboard_auth/basic/: plugin.yaml
scripts/: install.ps1  install.sh
tests/: test_install_sh_browser_install.py
tests/cli/: test_cli_background_status_indicator.py  test_cli_status_bar.py
tools/: browser_tool.py
tui_gateway/: server.py
ui-tui/src/: banner.ts  theme.ts
(+33 files in other folders)
